Re-Embedded Rogue Nebula

--- a/rogue_nebula.html
+++ b/rogue_nebula.html
@@ -42,7 +42,7 @@
 							<!-- Project Title -->
 							<h1 class="major">Rogue Nebula</h1>
 							<!-- Game Embed -->
-							<iframe class="embed" frameborder="0" src="https://itch.io/embed-upload/11536087?color=08031a" allowfullscreen="" width="1000" height="700"></iframe></iframe>
+							<iframe class="embed" frameborder="0" src="https://itch.io/embed-upload/11536257?color=08031a" allowfullscreen="" width="1000" height="700"><a href="https://heatwave-studios.itch.io/rogue-nebula">Play Rogue Nebula on itch.io</a></iframe>
 							<!-- Game Widget -->
 							<iframe class="widget" frameborder="0" src="https://itch.io/embed/2220827?border_width=0&amp;bg_color=0098db&amp;fg_color=ffffff&amp;link_color=0ce6f2&amp;border_color=ffffff" width="550" height="165">
 								<a href="https://heatwave-studios.itch.io/rogue-nebula">Rogue Nebula by Heatwave Studios</a></iframe>
