Trying to embed gifs

--- a/other_pj.html
+++ b/other_pj.html
@@ -47,11 +47,12 @@
 										<div class="col-4"><span class="image fit"><img src="images/ball_desc.jpg" alt="" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/ship_desc.jpg" alt="" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/tiny_title.jpg" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/dnd_desc.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/spirit_title.jpg" alt="" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/dwarf_title.jpg" alt="" /></span></div>
 									</div>
 								</div>
-							<p>The images above are a collections of smaller finished/unfinished projects that I have made from tutorials and courses. Some assets are my own and some
+							<p> 
+								The images above are a collections of smaller finished/unfinished projects that I have made from tutorials and courses. Some assets are my own and some
 								of them are from free download sources off the internet.
 							</p>
 							<p></p>
