--- a/the_devils_diner.html
+++ b/the_devils_diner.html
@@ -41,7 +41,9 @@
 						<div class="inner">
 							<!-- Project Title -->
 							<h1 class="major">The Devil's Diner</h1>
-
+							<!-- Game Embed -->
+							<iframe class="embed" frameborder="0" src="https://itch.io/embed-upload/6618380?color=280b00" allowfullscreen="" width="1000" height="700">
+								<a href="https://madcolors-entertainment.itch.io/the-devils-diner">Play The Devil's Diner on itch.io</a></iframe>
 							<!-- Game Widget -->
 							<iframe class="widget" frameborder="0" src="https://itch.io/embed/1731666?border_width=0&amp;bg_color=0098db&amp;fg_color=ffffff&amp;link_color=0ce6f2&amp;border_color=252446" width="550" height="165">
 								<a href="https://madcolors-entertainment.itch.io/the-devils-diner">The Devil's Diner by MadColors Entertainment</a></iframe>
