--- a/bloodlust.html
+++ b/bloodlust.html
@@ -39,6 +39,8 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
+							<iframe class="embed" frameborder="0" src="https://itch.io/embed-upload/5554156?color=333333" allowfullscreen="" width="1000" height="700">
+								<a href="https://madcolors-entertainment.itch.io/bloodlust">Play Bloodlust on itch.io</a></iframe>
 							<!-- Game Widget -->
 							<iframe class="widget" frameborder="0" src="https://itch.io/embed/1473093?border_width=0&amp;bg_color=0098db&amp;fg_color=ffffff&amp;link_color=0ce6f2&amp;border_color=ffffff" width="550" height="165">
 								<a href="https://madcolors-entertainment.itch.io/bloodlust">Bloodlust by MadColors Entertainment</a></iframe>
