--- a/fishy_business.html
+++ b/fishy_business.html
@@ -35,7 +35,6 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
@@ -43,20 +42,24 @@
 							<iframe class="widget" frameborder="0" src="https://itch.io/embed/2405082?border_width=0&amp;bg_color=0098db&amp;fg_color=ffffff&amp;link_color=0ce6f2&amp;border_color=ffffff" width="550" height="165">
 								<a href="https://fishy-devs.itch.io/fishy-business">Fishy Business by Fishy Devs</a></iframe>
 							<h1 class="major">Fishy Business</h1>
-							<!-- <span class="image fit"><img src="images/pic16.jpg" alt="" /></span> -->
-							<span class="image fit"><img src="images/space_gameplay_2.gif" alt="" /></span>
+							 <!-- Trailer -->
+							 <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/q4LZavW0Aq0?si=q50sGZdrGelizeVk" title="YouTube video player" frameborder="0" 
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+							<!-- Summary -->
 							<h2>Summary</h2>
-							<p> <em>Fishy Business</em> was a group project created for a game development class using the <a href="https://gamemaker.io/en">Gamemaker</a> engine. The project aimed to 
+							<p> 
+								<em>Fishy Business</em> was a group project created for a game development class using the <a href="https://gamemaker.io/en">Gamemaker</a> engine. The project aimed to 
 								simulate a professional studio environment, complete with deadlines, regular check-ins, peer evaluations, design documentation, and marketing. As the group leader and gameplay 
 								programmer, I played a pivotal role in bringing the project to life. A snapshot of the project can be found on our <a href="https://fishy-devs.itch.io/fishy-business">itch.io</a> page.</p>
 							</p>
-							<span class="image fit"><img src="images/space_gameplay.gif" alt="" /></span>
+							<!-- Gameplay Description -->
 							<h2>Gameplay</h2>
 							<p> <em>Fishy Business</em> is a lively fishing game in which the player can freely explore, fish, sell their catches, and buy new gear.
 								Starting in the "overworld", players explore a small lake area where they can fish and interact with <em>Fisher Frog</em> to sell and buy new gear.
 								Players can upgrade thier rod to increase the likelihood of catching rarer fish, improve their line control tension easier, and by using better bait 
 								to raise fish bite rate. Each fish is unique, with its own rarity and value—the rarer the fish, the more valuable it is to sell.
 							</p>
+							<!-- Feature List -->
 							<h2>Implemented Features</h2>
 							<div class="table-wrapper">
 								<table>
@@ -114,6 +117,7 @@
 							</div>
 							<br>
 							<br>
+							<!-- Links -->
 							<ul class="icons">
 								<li>Post Mortem Video - <a href="https://youtube.com/watch?v=q4LZavW0Aq0">https://youtube.com/watch?v=q4LZavW0Aq0</span></a></li>
 								<li>Link to Game - <a href="https://fishy-devs.itch.io/fishy-business">https://fishy-devs.itch.io/fishy-business</span></a></li>
@@ -121,7 +125,6 @@
 							</ul>
 						</div>
 					</section>
-
 			</div>
 
 		<!-- Footer -->
