--- a/rogue_nebula.html
+++ b/rogue_nebula.html
@@ -13,7 +13,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
+		<script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="zoecfwyt3pq7tgb"></script>
 		<!-- Header -->
 			<header id="header">
 				<a href="index.html" class="title">Ryan's Portfolio</a>
@@ -54,7 +54,6 @@
 								environment, reactive UI, vibrant special effects, and diverse enemy behaviors.
 							</p>
 							<!-- Gameplay Description -->
-							<span class="image fit"><img src="images/bl_gameplay.gif" alt="" /></span>
 							<h2>Gameplay</h2>
 							<p> 
 								The player begins by entering their name for a leaderboard entry; if a name is not selected, they are labeled "anonymous." When start is pressed the player is thrust into
@@ -63,6 +62,8 @@
 								continue to scale with the difficulty keeping the game a challenging and rewarding bullet-hell experience. High scores will be displayed for other players who
 								open the game.
 							</p>
+							<!-- Project Photos -->
+							<a href="https://www.dropbox.com/scl/fi/ad6l4ebovptczql8r2zlm/rogue_gameplay.gif?rlkey=31u3dcxqv8tiszey9ngiui6qm&st=lmg75ggp&dl=0"class="dropbox-embed"></a>
 							<!-- Feature List -->
 							<h2>Implemented Features</h2>
 							<div class="table-wrapper">
