--- a/rogue_nebula.html
+++ b/rogue_nebula.html
@@ -63,7 +63,8 @@
 								open the game. (This is edited)
 							</p>
 							<!-- Project Photos -->
-							<a href="https://www.dropbox.com/scl/fi/ad6l4ebovptczql8r2zlm/rogue_gameplay.gif?rlkey=31u3dcxqv8tiszey9ngiui6qm&st=lmg75ggp&dl=0"></a>
+							<a href="https://www.dropbox.com/scl/fi/ad6l4ebovptczql8r2zlm/rogue_gameplay.gif?rlkey=31u3dcxqv8tiszey9ngiui6qm&st=lmg75ggp&dl=0" class="dropbox-embed" data-height="1280"
+							data-width="720px"></a>
 							<!-- Feature List -->
 							<h2>Implemented Features</h2>
 							<div class="table-wrapper">
