--- a/rogue_nebula.html
+++ b/rogue_nebula.html
@@ -60,10 +60,10 @@
 								battle immediately as endless waves of enemies barrage the screen. To survive, players must dodge incoming projectiles and retaliate with the weapons in their arsenal. To aid survival, players 
 								can use special abilities and select a wide array of weapons. Every eight waves, the difficulty increases, with the hardest level starting after wave sixteen. Enemies will 
 								continue to scale with the difficulty keeping the game a challenging and rewarding bullet-hell experience. High scores will be displayed for other players who
-								open the game. (This is edited)
+								open the game. T
 							</p>
 							<!-- Project Photos -->
-							<a href="https://www.dropbox.com/scl/fi/ad6l4ebovptczql8r2zlm/rogue_gameplay.gif?rlkey=31u3dcxqv8tiszey9ngiui6qm&st=lmg75ggp&dl=0" class="dropbox-embed" data-height="1280"
+							<a href="https://www.dropbox.com/scl/fi/ad6l4ebovptczql8r2zlm/rogue_gameplay.gif?rlkey=31u3dcxqv8tiszey9ngiui6qm&st=lmg75ggp&dl=0" class="dropbox-embed" data-height="1280px"
 							data-width="720px"></a>
 							<!-- Feature List -->
 							<h2>Implemented Features</h2>
