--- a/rogue_nebula.html
+++ b/rogue_nebula.html
@@ -13,7 +13,6 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-		<script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="zoecfwyt3pq7tgb"></script>
 		<!-- Header -->
 			<header id="header">
 				<a href="index.html" class="title">Ryan's Portfolio</a>
@@ -63,8 +62,7 @@
 								open the game. T
 							</p>
 							<!-- Project Photos -->
-							<a href="https://www.dropbox.com/scl/fi/ad6l4ebovptczql8r2zlm/rogue_gameplay.gif?rlkey=31u3dcxqv8tiszey9ngiui6qm&st=lmg75ggp&dl=0" class="dropbox-embed" data-height="1280px"
-							data-width="720px"></a>
+							<img src="https://1drv.ms/i/c/200fcc2c8b975db8/IQSuEpRluZVYSrOuN_EUYI36AS7gH5oLMCnqWRO9Xa7jjBw?width=1024" width="1024" height="auto" />
 							<!-- Feature List -->
 							<h2>Implemented Features</h2>
 							<div class="table-wrapper">
