Trying a new gallery thingy

--- a/rogue_nebula.html
+++ b/rogue_nebula.html
@@ -62,7 +62,12 @@
 								open the game. T
 							</p>
 							<!-- Project Photos -->
-							<img src="https://1drv.ms/i/c/200fcc2c8b975db8/IQSuEpRluZVYSrOuN_EUYI36AS7gH5oLMCnqWRO9Xa7jjBw?width=1024" width="1024" height="auto" />
+							<div class="scroll-container">
+								<img src="images/blood_title.jpg" alt="Cinque Terre">
+								<img src="images/" alt="Forest">
+								<img src="images/" alt="Northern Lights">
+								<img src="" alt="Mountains">
+							  </div>
 							<!-- Feature List -->
 							<h2>Implemented Features</h2>
 							<div class="table-wrapper">
