--- a/rogue_nebula.html
+++ b/rogue_nebula.html
@@ -46,7 +46,7 @@
 							<iframe class="widget" frameborder="0" src="https://itch.io/embed/2220827?border_width=0&amp;bg_color=0098db&amp;fg_color=ffffff&amp;link_color=0ce6f2&amp;border_color=ffffff" width="550" height="165">
 								<a href="https://heatwave-studios.itch.io/rogue-nebula">Rogue Nebula by Heatwave Studios</a></iframe>
 							<!-- Small Game Widget -->
-							<iframe class="smallWidget" frameborder="0" src="https://itch.io/embed/2220827" width="208" height="167">
+							<iframe class="smallWidget" frameborder="0" src="https://itch.io/embed/2220827?bg_color=0098db&amp;link_color=0ce6f2&amp;border_color=ffffff" width="208" height="167">
 								<a href="https://heatwave-studios.itch.io/rogue-nebula">Rogue Nebula by Heatwave Studios</a></iframe>
 							<!-- Project Summary -->
 							<h2>Summary</h2>
