--- a/rogue_nebula.html
+++ b/rogue_nebula.html
@@ -65,7 +65,7 @@
 								open the game. T
 							</p>
 
-							<!-- Project Photos -->
+							<!-- Slideshow -->
 							<div class="slideshow-container">
 
 								<!-- Full-width images with number and caption text -->
