--- a/fishy_business.html
+++ b/fishy_business.html
@@ -69,23 +69,28 @@
 
 								<!-- Full-width images with number and caption text -->
 								<div class="mySlides fade">
-								<div class="numbertext">1 / 3</div>
+								<div class="numbertext">1 / 5</div>
 								<img src="images/fishy_business_gameplay/fishy_gameplay2.png" style="width:100%">
 								</div>
 							
 								<div class="mySlides fade">
-								<div class="numbertext">2 / 3</div>
+								<div class="numbertext">2 / 5</div>
 								<img src="/images/fishy_business_gameplay/fishy_gameplay4.png" style="width:100%">
 								</div>
 							
 								<div class="mySlides fade">
-								<div class="numbertext">3 / 3</div>
+								<div class="numbertext">3 / 5</div>
+								<img src="/images/fishy_business_gameplay/fishy_gameplay6.png" style="width:100%">
+								</div>
+
+								<div class="mySlides fade">
+								<div class="numbertext">4 / 5</div>
 								<img src="/images/fishy_business_gameplay/fishy_gameplay3.png" style="width:100%">
 								</div>
 
 								<div class="mySlides fade">
-								<div class="numbertext">4 / 4</div>
-								<img src="/images/fishy_business_gameplay/fishy_gameplay5.png" style="width:100%">
+								<div class="numbertext">5 / 5</div>
+								<img src="/images/fishy_business_gameplay/fishy_gameplay7.png" style="width:100%">
 								</div>
 
 								<!-- Next and previous buttons -->
