--- a/future_scape.html
+++ b/future_scape.html
@@ -84,12 +84,6 @@
 							</div>
 							<br>
 							
-							<!-- The dots/circles -->
-							<div style="text-align:center">
-								<span class="dot" onclick="currentSlide(1)"></span>
-								<span class="dot" onclick="currentSlide(2)"></span>
-								<span class="dot" onclick="currentSlide(3)"></span>
-							</div>
 							<!-- Movement Script -->
 							<script>
 								let slideIndex = 1;
@@ -185,8 +179,7 @@
 							<br>
 							<!-- Links -->
 							<ul class="icons">
-								<li>Link to Game - <a href="https://heatwave-studios.itch.io/rogue-nebula">https://heatwave-studios.itch.io/rogue-nebula</span></a></li>
-								<li>Repository Link - <a href="https://github.com/GDCASU/SummerSession2023" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								<li>Link to Game - <a href="https://nextlab.itch.io/futurescape">https://nextlab.itch.io/futurescape</span></a></li>
 							</ul>
 						</div>
 					</section>
