--- a/the_devils_diner.html
+++ b/the_devils_diner.html
@@ -185,8 +185,8 @@
 							</div>
 							<!-- Links -->
 							<ul class="icons">
-								<li>Link to Prototype - <a href="https://madcolors-entertainment.itch.io/the-devils-diner">https://madcolors-entertainment.itch.io/the-devils-diner</span></a></li>
-								<!-- TODO: Link GitHub once a tradmark has been applied to the repository -->
+								<li>Link to Game - <a href="https://madcolors-entertainment.itch.io/the-devils-diner">https://madcolors-entertainment.itch.io/the-devils-diner</span></a></li>
+								<li>Repository Link - <a href="https://github.com/dev-rygy/The-Devils-Diner" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 						</div>
 					</section>
