--- a/fishy_business.html
+++ b/fishy_business.html
@@ -191,7 +191,6 @@
 							<br>
 							<!-- Links -->
 							<ul class="icons">
-								<li>Post Mortem Video - <a href="https://youtube.com/watch?v=q4LZavW0Aq0">https://youtube.com/watch?v=q4LZavW0Aq0</span></a></li>
 								<li>Link to Game - <a href="https://fishy-devs.itch.io/fishy-business">https://fishy-devs.itch.io/fishy-business</span></a></li>
 								<li>Repository Link - <a href="https://github.com/dev-rygy/Fishy-Business" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
@@ -203,7 +202,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>Website Template By: <a href="http://html5up.net">HTML5 UP</a></li>
+						<!-- <li>Website Template By: <a href="http://html5up.net">HTML5 UP</a></li> -->
 					</ul>
 				</div>
 			</footer>
