--- a/unstable_star.html
+++ b/unstable_star.html
@@ -212,8 +212,8 @@
 							<br>
 							<!-- Links -->
 							<ul class="icons">
-								<li>Link to Game - <a href="https://heatwave-studios.itch.io/rogue-nebula">https://heatwave-studios.itch.io/rogue-nebula</span></a></li>
-								<li>Repository Link - <a href="https://github.com/GDCASU/SummerSession2023" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								<li>Link to Game - <a href="https://heatwave-studios.itch.io/unstable-star">https://heatwave-studios.itch.io/unstable-star</span></a></li>
+								<li>Repository Link - <a href="https://github.com/GDCASU/Unstable-Star" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 						</div>
 					</section>
