College was spelled incorrectly

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									<ul>
 										<li><a href="https://www.asu.edu/">Arizona State University</a> 2022 - Present
 											(Bachlor's Degree - in Progress)</li>
-										<li><a href="https://prod.orangecoastcollege.edu/">Orange Coast Collage</a> 2019 - 2022
+										<li><a href="https://prod.orangecoastcollege.edu/">Orange Coast College</a> 2019 - 2022
 											(Associate Degree - Aquired 2022)</li>
 										<li><a href="https://www.msjc.edu/">Mt. San Jacento Collage</a> 2017 - 2018</li></ul>
 										<!-- TODO: Add a "More Details" button to explain more of your experience -->
