--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<div class="inner">
 							<!-- Summary -->
 							<h2>ABOUT ME</h2>
-							<p>Hello, I'm a senior Computer Science undergraduate studying at <a href="https://www.asu.edu/">Arizona State University</a>. Game developement has been a lifelong passion of mine and am very commited to the projects I create.
+							<p>Hello, I'm a senior Computer Science undergraduate studying at <a href="https://www.asu.edu/">Arizona State University</a>. Game development has been a lifelong passion of mine and am very committed to the projects I create.
 								My dream is to one day change the industry by not only enticing the players who play games but inspire developers to make great games.</p>
 							
 							<!-- Feature Table -->
@@ -58,10 +58,10 @@
 									<span class="icon solid major fa-code"></span>
 									<h3>Programming</h3>
 									<ul>
-										<li>Proficiant Languages: C#, C++, C, HTML, CSS, Javascript.</li>
+										<li>Proficient Languages: C#, C/C++, HTML, CSS, Javascript.</li>
 										<li>Other languages that I've learned:<br>SQL, Kotlin, Java, Python.</li>
-										<li>Special Interests: Game Engine Development, Web Development, App Development,
-											AI in Video Games, Compiler Design.
+										<li>Applied Skills: Game Engine Development, Procedural Generation,
+											Web Development, Mobile Development.
 										</li>
 										<!-- TODO: Add a "More Details" button to explain more of your experience -->
 									</ul>
@@ -71,9 +71,9 @@
 									<span class="icon solid major fa-gamepad"></span>
 									<h3>Game Development</h3>
 									<ul>
-										<li>President of The <a href="https://asu.campuslabs.com/engage/organization/vgdc">Video Game Developement Club at ASU</a>.</li>
+										<li>President of The <a href="https://asu.campuslabs.com/engage/organization/vgdc">Video Game Development Club at ASU</a>.</li>
 										<li>6+ years of experience with the <a href="https://unity.com/">Unity Creation Engine</a>.</li>
-										<li>1+ years of experience with <a href="https://docs.unity3d.com/Packages/com.unity.xr.interaction.toolkit@2.5/manual/index.html">Unity XR Interaction Toolkit</a>
+										<li>Experience with <a href="https://docs.unity3d.com/Packages/com.unity.xr.interaction.toolkit@2.5/manual/index.html">Unity XR Interaction Toolkit</a>
 											 and <a href="https://developers.meta.com/horizon/develop">Meta Quest Developement</a>.</li>
 										<li>Participated in multiple game jams including <a href="https://ldjam.com/">Ludum Dare</a> (More info Below).</li>									</ul>
 								</section>
