Updates to main page

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 									<div class="inner">
 										<h2>Unstable Star (2024)</h2>
 										<p> 
-											A Developed for the <a href="https://asu.campuslabs.com/engage/organization/vgdc">Video Game Development Club</a>'s 2023-24 session, a successor to <em>Rogue Nebula</em>, this game tells a comedic and 
+											Developed for the <a href="https://asu.campuslabs.com/engage/organization/vgdc">Video Game Development Club</a>'s 2023-24 session, a successor to <em>Rogue Nebula</em>, this game tells a comedic and 
 											heartwarming story of a lowly guard challenging a galactic empire. Travel through three variable levels including dynamic objectives
 											and challenging boss fights. Players journey through three diverse levels with dynamic objectives and challenging boss fights. The game 
 											features a full animated dialogue system, weapon and ability inventory, a responsive UI, vibrant sounds and VFX, and varied enemy behaviors.
