Future Scape Upload

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<div class="inner">
 							<!-- Summary -->
 							<h2>ABOUT ME</h2>
-							<p>Hello, I'm a senior Computer Science undergraduate studying at <a href="https://www.asu.edu/">Arizona State University</a>. Game development has been a lifelong passion of mine and am very committed to the projects I create.
+							<p>Hello, I'm a senior computer science undergraduate studying at <a href="https://www.asu.edu/">Arizona State University</a>. Game development has been a lifelong passion of mine and am very committed to the projects I create.
 								My dream is to one day change the industry by not only enticing the players who play games but inspire developers to make great games.</p>
 							
 							<!-- Feature Table -->
@@ -139,11 +139,11 @@
 									<div class="inner">
 										<h2>Future Scape (2024)</h2>
 										<p> 
-											Developed for <a href="https://tech.asu.edu/">Enterprise Technologies</a> this virtual career explorer targets primary and 
+											Developed for <a href="https://tech.asu.edu/">Enterprise Technologies</a> this virtual reality career explorer targets primary and 
 											middle school students. It features a variety of minigames exploring careers like pharmacology, manufacturing, forensic science and more. 
 											I solely created the pharmacy, manufacturing, and urban planning minigames. As a pharmacist, players dispense medications within a 
-											time limit. In manufacturing, players design assembly lines and combine components to create products for sale.
-											In urban planning, players build your own city while managing a budget and resources at your disposal.
+											time limit. In manufacturing, players design assembly lines and combine components on a world space grid to create products for sale.
+											In urban planning, players build your own city on a world space grid while managing a budget and resources at your disposal.
 										</p>
 										<!-- Make progress bars for coding languages used here -->
 										<ul class="actions">
