Quick Description Update

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									<h3>Programming</h3>
 									<ul>
 										<li>Proficient Languages: C#, C/C++, HTML, CSS, Javascript.</li>
-										<li>Other languages that I've learned:<br>SQL, Kotlin, Java, Python.</li>
+										<li>Other languages that I've learned:<br>SQL, Dart, Java, Python.</li>
 										<li>Applied Skills: Game Engine Development, Procedural Generation,
 											Web Development, Mobile Development.
 										</li>
@@ -83,9 +83,9 @@
 									<h3>Education</h3>
 									<ul>
 										<li><a href="https://www.asu.edu/">Arizona State University</a> 2022 - Present
-											(Bachlor's Degree - in Progress)</li>
+											(B.S. Degree - in Progress)</li>
 										<li><a href="https://prod.orangecoastcollege.edu/">Orange Coast College</a> 2019 - 2022
-											(Associate Degree - Aquired 2022)</li>
+											(A.S. Degree - Aquired 2022)</li>
 										<li><a href="https://www.msjc.edu/">Mt. San Jacento Collage</a> 2017 - 2018</li></ul>
 										<!-- TODO: Add a "More Details" button to explain more of your experience -->
 									</ul>
