--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 											(B.S. Degree - in Progress)</li>
 										<li><a href="https://prod.orangecoastcollege.edu/">Orange Coast College</a> 2019 - 2022
 											(A.S. Degree - Aquired 2022)</li>
-										<li><a href="https://www.msjc.edu/">Mt. San Jacento Collage</a> 2017 - 2018</li></ul>
+										<li><a href="https://www.msjc.edu/">Mt. San Jacento College</a> 2017 - 2018</li></ul>
 										<!-- TODO: Add a "More Details" button to explain more of your experience -->
 									</ul>
 								</section>
