Spelling Update pt. 2

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 						<div class="inner">
 							<!-- Summary -->
 							<h2>ABOUT ME</h2>
-							<p>Hello, I'm a senior computer science undergraduate studying at <a href="https://www.asu.edu/">Arizona State University</a>. Game development has been a lifelong passion of mine and am very committed to the projects I create.
-								My dream is to one day change the industry by not only enticing the players who play games but inspire developers to make great games.</p>
+							<p>Hello, I'm a computer science graduate from <a href="https://www.asu.edu/">Arizona State University</a>. Game development has been my lifelong passion and this website is
+								dedicated to the projects I create. I hope to one day change the industry by not only enticing the players who play games but inspire developers to make great games.</p>
 							
 							<!-- Feature Table -->
 							<div class="features">
@@ -59,7 +59,7 @@
 									<h3>Programming</h3>
 									<ul>
 										<li>Proficient Languages: C#, C/C++, HTML, CSS, Javascript.</li>
-										<li>Other languages that I've learned:<br>SQL, Dart, Java, Python.</li>
+										<li>Other Languages:<br>SQL, Dart, Java, Python.</li>
 										<li>Applied Skills: Game Engine Development, Procedural Generation,
 											Web Development, Mobile Development.
 										</li>
@@ -71,21 +71,21 @@
 									<span class="icon solid major fa-gamepad"></span>
 									<h3>Game Development</h3>
 									<ul>
-										<li>President of The <a href="https://asu.campuslabs.com/engage/organization/vgdc">Video Game Development Club at ASU</a>.</li>
+										<li>Former President of The <a href="https://asu.campuslabs.com/engage/organization/vgdc">Video Game Development Club at ASU</a>.</li>
 										<li>6+ years of experience with the <a href="https://unity.com/">Unity Creation Engine</a>.</li>
 										<li>Experience with <a href="https://docs.unity3d.com/Packages/com.unity.xr.interaction.toolkit@2.5/manual/index.html">Unity XR Interaction Toolkit</a>
 											 and <a href="https://developers.meta.com/horizon/develop">Meta Quest Developement</a>.</li>
-										<li>Participated in multiple game jams including <a href="https://ldjam.com/">Ludum Dare</a> (More info Below).</li>									</ul>
+										<li>Game jam participation including <a href="https://ldjam.com/">Ludum Dare</a> (More info Below).</li>									</ul>
 								</section>
 								<!-- Education Experience -->
 								<section>
 									<span class="icon solid major fa-graduation-cap"></span>
 									<h3>Education</h3>
 									<ul>
-										<li><a href="https://www.asu.edu/">Arizona State University</a> 2022 - Present
-											(B.S. Degree - in Progress)</li>
+										<li><a href="https://www.asu.edu/">Arizona State University</a> 2022 - 2025
+											<em>(B.S. Degree - Computer Science)</em></li>
 										<li><a href="https://prod.orangecoastcollege.edu/">Orange Coast College</a> 2019 - 2022
-											(A.S. Degree - Aquired 2022)</li>
+											<em>(A.S. Degree - Computer Science)</em></li>
 										<li><a href="https://www.msjc.edu/">Mt. San Jacento College</a> 2017 - 2018</li></ul>
 										<!-- TODO: Add a "More Details" button to explain more of your experience -->
 									</ul>
@@ -95,9 +95,9 @@
 									<span class="icon solid major fa-paint-brush"></span>
 									<h3>Animation & Art</h3>
 									<ul>
-										<li>Experience in <a href="https://www.blender.org/">Blender</a> an app used to create 3D game assets.</li>
-										<li>Experience in <a href="https://www.aseprite.org/">Aseprite</a>, an app used to make 2D pixel art.</li>
-										<li>Experience in <a href="https://www.adobe.com/">Adobe</a> apps like Photoshop, Illistrator, and Lightroom.</li>
+										<li>Experience with <a href="https://www.blender.org/">Blender</a> an app used to create 3D assets.</li>
+										<li>Experience with <a href="https://www.aseprite.org/">Aseprite</a>, an app used to make 2D pixel art.</li>
+										<li>Experience with <a href="https://www.adobe.com/">Adobe</a> apps like Photoshop, Illistrator, and Lightroom.</li>
 										<!-- TODO: Add a "More Details" button to explain more of your experience -->
 									</ul>
 								</section>
@@ -139,9 +139,9 @@
 									<div class="inner">
 										<h2>Future Scape (2024)</h2>
 										<p> 
-											Developed for <a href="https://tech.asu.edu/">Enterprise Technologies</a> this virtual reality career explorer targets primary and 
+											Developed for <a href="https://tech.asu.edu/">Enterprise Technology</a> this virtual reality career explorer targets primary and 
 											middle school students. It features a variety of minigames exploring careers like pharmacology, manufacturing, forensic science and more. 
-											I solely created the pharmacy, manufacturing, and urban planning minigames. As a pharmacist, players dispense medications within a 
+											I solely created the pharmacy, manufacturing, and urban planning minigames.<br> As a pharmacist, players dispense medications within a 
 											time limit. In manufacturing, players design assembly lines and combine components on a world space grid to create products for sale.
 											In urban planning, players build your own city on a world space grid while managing a budget and resources at your disposal.
 										</p>
