--- a/index.html
+++ b/index.html
@@ -111,13 +111,33 @@
 						<div class="inner">
 						<h2>PROJECTS</h2>
 						</div>
+						<!-- Labyrinth Proc. Gen -->
+						<section>
+							<a href="#" class="image"><img src="images/nebula_title.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="content">
+									<div class="inner">
+										<h2>Labyrinth Procedural Generation Algorithm<br><em>2025</em></h2>
+										<p> 
+											Technical demo of a personal project I've been working on for the past year. The Labyrinth Algorithm combines many
+											sophisticated procedural generation algorithms and a custom blueprint algorithm to create vast interconnected dungeons.
+											The algorithm is time and memory efficient making dungeons with thousands of rooms generate in seconds. The algorithm is
+											also built to be scalable and robust for future additions and gameplay mechanics.
+										</p>
+										<!-- Make progress bars for coding languages used here -->
+										<ul class="actions">
+											<li><a href="labyrinth_alg.html" class="button">More Details</a></li>
+										</ul>
+									</div>
+							</div>
+						</section>
 						<!-- Rogue Nebula -->
 						<section>
 							<a href="#" class="image"><img src="images/nebula_title.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="content">
 									<div class="inner">
-										<h2>Rogue Nebula (2023)</h2>
+										<h2>Rogue Nebula<br><em>2023</em></h2>
 										<p> 
 											Developed for the <a href="https://asu.campuslabs.com/engage/organization/vgdc">Video Game Development Club</a>'s summer session, 
 											this prototype for a future project <em>Unstable Star</em> challenges players to survive endless waves of enemies in pursuit of a 
@@ -137,7 +157,7 @@
 							<div class="content">
 								<div class="content">
 									<div class="inner">
-										<h2>Future Scape (2024)</h2>
+										<h2>Future Scape<br><em>2024</em></h2>
 										<p> 
 											Developed for <a href="https://tech.asu.edu/">Enterprise Technology</a> this virtual reality career explorer targets primary and 
 											middle school students. It features a variety of minigames exploring careers like pharmacology, manufacturing, forensic science and more. 
@@ -158,7 +178,7 @@
 							<div class="content">
 								<div class="content">
 									<div class="inner">
-										<h2>Unstable Star (2024)</h2>
+										<h2>Unstable Star<br><em>2024</em></h2>
 										<p> 
 											Developed for the <a href="https://asu.campuslabs.com/engage/organization/vgdc">Video Game Development Club</a>'s 2023-24 session, a successor to <em>Rogue Nebula</em>, this game tells a comedic and 
 											heartwarming story of a lowly guard challenging a galactic empire. Travel through three variable levels including dynamic objectives
@@ -177,7 +197,7 @@
 							<a href="#" class="image"><img src="images/devil_title.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>The Devil's Diner (2023)</h2>
+									<h2>The Devil's Diner<br><em>2023</em></h2>
 									<p>
 										Created with a small team for <a href="https://ldjam.com/events/ludum-dare/50">Ludum Dare Game Jam #50</a>, this game stars a simple chef doomed to cook
 										the devil's for demons in Hell's most treacherous kitchen. Developed in 72 hours, the game features a crafting system, interactive UI, leaderboard, cutscenes, 
@@ -197,7 +217,7 @@
 							<div class="content">
 								<div class="content">
 									<div class="inner">
-										<h2>Bloodlust (2021)</h2>
+										<h2>Bloodlust<br><em>2021</em></h2>
 										<p> 
 											Developed with a colleague for <a href="https://ldjam.com/events/ludum-dare/49">Ludum Dare Game Jam #49</a>, this game features sophisticated AI, 
 											A* pathfinding, a dynamic NPC scheduling system, a day and night cycle, and an inventory system. All assets and artwork are my own.
@@ -229,7 +249,7 @@
 							</div>
 						</section>
 						-->
-						<!-- Fishy Business -->
+						<!-- Fishy Business (archived)
 						<section>
 							<a href="#" class="image"><img src="images/fishy_title.png" alt="" data-position="top center" /></a>
 							<div class="content">
@@ -240,14 +260,15 @@
 										studio environment, complete with deadlines, checkups, peer evaluations, design documentation, and presentations. I served as the group leader and gameplay 
 										programmer.
 									</p>
-									<!-- Make progress bars for coding languages used here -->
+									 Make progress bars for coding languages used here
 									<ul class="actions">
 										<li><a href="fishy_business.html" class="button">More Details</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
-					<!-- Spirit Of Calamity	(archived)
+						-->
+						<!-- Spirit Of Calamity	(archived)
 						<section>
 							<a href="#" class="image"><img src="images/spirit_title.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
