--- a/index.html
+++ b/index.html
@@ -48,9 +48,12 @@
 						<div class="inner">
 							<!-- Summary -->
 							<h2>ABOUT ME</h2>
-							<p>Hello, I'm a computer science graduate from <a href="https://www.asu.edu/">Arizona State University</a>. Game development has been my lifelong passion and this website is
-								dedicated to the projects I create. I hope to one day change the industry by not only enticing the players who play games but inspire developers to make great games.</p>
-							
+							<p>
+								Hello, I'm a computer science graduate from <a href="https://www.asu.edu/">Arizona State University</a>. 
+								Game development has been my lifelong passion and this website is dedicated to the projects I create. 
+								My mission is to one day change the industry by not only enticing the players who play games but inspire 
+								developers to make great games.
+							</p>
 							<!-- Feature Table -->
 							<div class="features">
 								<!-- Programming Experience -->
