--- a/future_scape.html
+++ b/future_scape.html
@@ -205,6 +205,7 @@
 							<!-- Links -->
 							<ul class="icons">
 								<li>Link to Game - <a href="https://nextlab.itch.io/futurescape">https://nextlab.itch.io/futurescape</span></a></li>
+								<li>Link to Proprietor's Website - <a href="https://nextlab.asu.edu/futurescape">https://nextlab.asu.edu/futurescape</span></a></li>
 							</ul>
 						</div>
 					</section>
