Labyrinth Project Setup

--- a/future_scape.html
+++ b/future_scape.html
@@ -20,13 +20,14 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
+						<li><a href="labyrinth_demo.html">Labyrinth Demo</a>
 						<li><a href="rogue_nebula.html">Rogue Nebula</a></li>
 						<li><a href="future_scape.html" class="active">Future Scape</a></li>
 						<li><a href="unstable_star.html">Unstable Star</a></li>
 						<li><a href="the_devils_diner.html">The Devil's Diner</a></li>
 						<li><a href="bloodlust.html">Bloodlust</a></li>
 						<!-- <li><a href="star_raid.html">Star Raid</a></li> (archived) -->
-						<li><a href="fishy_business.html">Fishy Business</a></li>
+						<!-- <li><a href="fishy_business.html">Fishy Business</a></li> (archived) -->
 						<!-- <li><a href="soc.html">Spirit of Calamity</a></li> (archived) -->
 						<li><a href="other_pj.html">Smaller Projects</a></li>
 					</ul>
@@ -101,7 +102,6 @@
 										<div class="numbertext">3 / 3</div>
 										<img src="/images/future_scape_images/urban_plan_demo2.png" style="width:100%">
 										</div>
-								
 								
 								<!-- Next and previous buttons -->
 								<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
