--- a/labyrinth_demo.html
+++ b/labyrinth_demo.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Ryan Carpenter's Portfolio - Rogue Nebula</title>
+		<title>Ryan Carpenter's Portfolio - Labyrinth Demo</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />	<!-- css stylesheet -->
@@ -19,8 +19,8 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="labyrinth_demo.html">Labyrinth Demo</a>
-						<li><a href="rogue_nebula.html" class="active">Rogue Nebula</a></li>
+						<li><a href="labyrinth_demo.html" class="active">Labyrinth Demo</a>
+						<li><a href="rogue_nebula.html">Rogue Nebula</a></li>
 						<li><a href="future_scape.html">Future Scape</a></li>
 						<li><a href="unstable_star.html">Unstable Star</a></li>
 						<li><a href="the_devils_diner.html">The Devil's Diner</a></li>
@@ -40,30 +40,30 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<!-- Project Title -->
-							<h1 class="major">Rogue Nebula</h1>
+							<h1 class="major">The Labyrinth Algorithm</h1>
 							<!-- Game Embed -->
-							<iframe class="embed" frameborder="0" src="https://itch.io/embed-upload/11536257?color=08031a" allowfullscreen="" width="1000" height="700"><a href="https://heatwave-studios.itch.io/rogue-nebula">Play Rogue Nebula on itch.io</a></iframe>
+							<!-- <iframe class="embed" frameborder="0" src="https://itch.io/embed-upload/11536257?color=08031a" allowfullscreen="" width="1000" height="700"><a href="https://heatwave-studios.itch.io/rogue-nebula">Play Rogue Nebula on itch.io</a></iframe> -->
 							<!-- Big Game Widget -->
-							<iframe class="widget" frameborder="0" src="https://itch.io/embed/2220827?border_width=0&amp;bg_color=0098db&amp;fg_color=ffffff&amp;link_color=0ce6f2&amp;border_color=ffffff" width="550" height="165">
-								<a href="https://heatwave-studios.itch.io/rogue-nebula">Rogue Nebula by Heatwave Studios</a></iframe>
+							<!-- <iframe class="widget" frameborder="0" src="https://itch.io/embed/2220827?border_width=0&amp;bg_color=0098db&amp;fg_color=ffffff&amp;link_color=0ce6f2&amp;border_color=ffffff" width="550" height="165">
+								<a href="https://heatwave-studios.itch.io/rogue-nebula">Rogue Nebula by Heatwave Studios</a></iframe> -->
 							<!-- Small Game Widget -->
-							<iframe class="smallWidget" frameborder="0" src="https://itch.io/embed/2220827?bg_color=0098db&amp;link_color=0ce6f2&amp;border_color=ffffff" width="208" height="167">
-								<a href="https://heatwave-studios.itch.io/rogue-nebula">Rogue Nebula by Heatwave Studios</a></iframe>
+							<!-- <iframe class="smallWidget" frameborder="0" src="https://itch.io/embed/2220827?bg_color=0098db&amp;link_color=0ce6f2&amp;border_color=ffffff" width="208" height="167">
+								<a href="https://heatwave-studios.itch.io/rogue-nebula">Rogue Nebula by Heatwave Studios</a></iframe> -->
 							<!-- Project Summary -->
 							<h2>Summary</h2>
 							<p> 
-								Developed during the summer session of the <a href="https://asu.campuslabs.com/engage/organization/vgdc">Video Game Development Club</a>, <em>Rogue Nebula</em> challenges players to survive endless 
-								waves of enemies while aiming for a high score. Heavily inspired by classic arcade titles like <em>Galaga</em>, <em>Defender (1981)</em>, and <em>Space Invaders</em>, the game features a scrolling 3D 
-								environment, reactive UI, vibrant special effects, and diverse enemy behaviors.
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis nunc fermentum, imperdiet mi et, rhoncus metus. Nulla bibendum leo eget nisi 
+								vehicula, malesuada rhoncus est auctor. Proin fringilla, justo sed mollis fermentum, ligula diam finibus mauris, eget dignissim dolor ex a ex. Cras 
+								nec lectus sagittis, vulputate nisi et, imperdiet lorem. Cras iaculis lectus ut aliquet rutrum. Integer aliquam turpis quis neque scelerisque eleifend. 
+								Maecenas semper auctor mauris non tincidunt. Vivamus sit amet accumsan dui.
 							</p>
 							<!-- Gameplay Description -->
 							<h2>Gameplay</h2>
 							<p> 
-								The player begins by entering their name for a leaderboard entry; if a name is not selected, they are labeled "anonymous." When start is pressed the player is thrust into
-								battle immediately as endless waves of enemies barrage the screen. To survive, players must dodge incoming projectiles and retaliate with the weapons in their arsenal. To aid survival, players 
-								can use special abilities and select a wide array of weapons. Every eight waves, the difficulty increases, with the hardest level starting after wave sixteen. Enemies will 
-								continue to scale with the difficulty keeping the game a challenging and rewarding bullet-hell experience. High scores will be displayed for other players who
-								open the game.
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis nunc fermentum, imperdiet mi et, rhoncus metus. Nulla bibendum leo eget nisi 
+								vehicula, malesuada rhoncus est auctor. Proin fringilla, justo sed mollis fermentum, ligula diam finibus mauris, eget dignissim dolor ex a ex. Cras 
+								nec lectus sagittis, vulputate nisi et, imperdiet lorem. Cras iaculis lectus ut aliquet rutrum. Integer aliquam turpis quis neque scelerisque eleifend. 
+								Maecenas semper auctor mauris non tincidunt. Vivamus sit amet accumsan dui.
 							</p>
 
 							<!-- Slideshow -->
@@ -186,8 +186,8 @@
 							<br>
 							<!-- Links -->
 							<ul class="icons">
-								<li>Link to Game - <a href="https://heatwave-studios.itch.io/rogue-nebula">https://heatwave-studios.itch.io/rogue-nebula</span></a></li>
-								<li>Repository Link - <a href="https://github.com/GDCASU/SummerSession2023" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								<li>Link to Game - <a href="">N/A</span></a></li>
+								<li>Repository Link - <a href="" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 						</div>
 					</section>
