--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 							<p>
 								Hello, I'm a computer science graduate from <a href="https://www.asu.edu/">Arizona State University</a>. 
 								Game development has been my lifelong passion and this website is dedicated to the projects I create. 
-								My mission is to one day change the industry by not only enticing the players who play games but inspire 
-								developers to make great games.
+								My mission is to one day change the industry by not only enticing the players who interact with my games
+								but also inspire developers to make exceptional games.
 							</p>
 							<!-- Feature Table -->
 							<div class="features">
