--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 									<span class="icon solid major fa-code"></span>
 									<h3>Programming</h3>
 									<ul>
-										<li>Proficient Languages: C#, C/C++, HTML, CSS, Javascript.</li>
-										<li>Other Languages:<br>SQL, Dart, Java, Python.</li>
-										<li>Applied Skills: Game Engine Development, Procedural Generation,
-											Web Development, Mobile Development.
+										<li>Proficient Languages: C#, C/C++, HTML, CSS, Javascript</li>
+										<li>Other Languages: SQL, HLSL, Dart, Java, Python</li>
+										<li>Applied Skills: Game Engines, Procedural Generation,
+											Web Development, Mobile Development
 										</li>
 										<!-- TODO: Add a "More Details" button to explain more of your experience -->
 									</ul>
@@ -116,20 +116,19 @@
 						</div>
 						<!-- Labyrinth Proc. Gen -->
 						<section>
-							<a href="#" class="image"><img src="images/nebula_title.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/labyrinth_images/labyrinth_thumbnail.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="content">
 									<div class="inner">
 										<h2>Labyrinth Procedural Generation Algorithm<br><em>2025</em></h2>
 										<p> 
-											Technical demo of a personal project I've been working on for the past year. The Labyrinth Algorithm combines many
-											sophisticated procedural generation algorithms and a custom blueprint algorithm to create vast interconnected dungeons.
-											The algorithm is time and memory efficient making dungeons with thousands of rooms generate in seconds. The algorithm is
-											also built to be scalable and robust for future additions and gameplay mechanics.
+											The Labyrinth Algorithm combines many sophisticated procedural generation algorithms and a custom blueprint algorithm to 
+											create vast contigious interconnected dungeons. The algorithm utalizes time and memory efficiency, making dungeons with thousands 
+											of rooms generate in a matter of seconds. The algorithm is also built to be scalable and robust for future additions and gameplay mechanics.
 										</p>
 										<!-- Make progress bars for coding languages used here -->
 										<ul class="actions">
-											<li><a href="labyrinth_alg.html" class="button">More Details</a></li>
+											<li><a href="labyrinth_demo.html" class="button">More Details</a></li>
 										</ul>
 									</div>
 							</div>
