--- a/rogue_nebula.html
+++ b/rogue_nebula.html
@@ -19,7 +19,7 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="labyrinth_demo.html">Labyrinth Demo</a>
+						<li><a href="labyrinth_demo.html">Labyrinth Algorithm</a>
 						<li><a href="rogue_nebula.html" class="active">Rogue Nebula</a></li>
 						<li><a href="future_scape.html">Future Scape</a></li>
 						<li><a href="unstable_star.html">Unstable Star</a></li>
