--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 							<div class="content">
 								<div class="content">
 									<div class="inner">
-										<h2>Labyrinth Procedural Generation Algorithm<br><em>2025</em></h2>
+										<h2>Labyrinth Procedural Generation Algorithm<br><em>(2025)</em></h2>
 										<p> 
 											The Labyrinth Algorithm combines many sophisticated procedural generation algorithms and a custom blueprint algorithm to 
 											create vast contigious interconnected dungeons. The algorithm utalizes time and memory efficiency, making dungeons with thousands 
@@ -139,7 +139,7 @@
 							<div class="content">
 								<div class="content">
 									<div class="inner">
-										<h2>Rogue Nebula<br><em>2023</em></h2>
+										<h2>Rogue Nebula<br><em>(2023)</em></h2>
 										<p> 
 											Developed for the <a href="https://asu.campuslabs.com/engage/organization/vgdc">Video Game Development Club</a>'s summer session, 
 											this prototype for a future project <em>Unstable Star</em> challenges players to survive endless waves of enemies in pursuit of a 
@@ -159,7 +159,7 @@
 							<div class="content">
 								<div class="content">
 									<div class="inner">
-										<h2>Future Scape<br><em>2024</em></h2>
+										<h2>Future Scape<br><em>(2024)</em></h2>
 										<p> 
 											Developed for <a href="https://tech.asu.edu/">Enterprise Technology</a> this virtual reality career explorer targets primary and 
 											middle school students. It features a variety of minigames exploring careers like pharmacology, manufacturing, forensic science and more. 
@@ -180,7 +180,7 @@
 							<div class="content">
 								<div class="content">
 									<div class="inner">
-										<h2>Unstable Star<br><em>2024</em></h2>
+										<h2>Unstable Star<br><em>(2024)</em></h2>
 										<p> 
 											Developed for the <a href="https://asu.campuslabs.com/engage/organization/vgdc">Video Game Development Club</a>'s 2023-24 session, a successor to <em>Rogue Nebula</em>, this game tells a comedic and 
 											heartwarming story of a lowly guard challenging a galactic empire. Travel through three variable levels including dynamic objectives
@@ -199,7 +199,7 @@
 							<a href="#" class="image"><img src="images/devil_title.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>The Devil's Diner<br><em>2023</em></h2>
+									<h2>The Devil's Diner<br><em>(2023)</em></h2>
 									<p>
 										Created with a small team for <a href="https://ldjam.com/events/ludum-dare/50">Ludum Dare Game Jam #50</a>, this game stars a simple chef doomed to cook
 										the devil's for demons in Hell's most treacherous kitchen. Developed in 72 hours, the game features a crafting system, interactive UI, leaderboard, cutscenes, 
@@ -219,7 +219,7 @@
 							<div class="content">
 								<div class="content">
 									<div class="inner">
-										<h2>Bloodlust<br><em>2021</em></h2>
+										<h2>Bloodlust<br><em>(2021)</em></h2>
 										<p> 
 											Developed with a colleague for <a href="https://ldjam.com/events/ludum-dare/49">Ludum Dare Game Jam #49</a>, this game features sophisticated AI, 
 											A* pathfinding, a dynamic NPC scheduling system, a day and night cycle, and an inventory system. All assets and artwork are my own.
