Spelling Error Fix

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 										<h2>Labyrinth Procedural Generation Algorithm<br><em>(2025)</em></h2>
 										<p> 
 											The Labyrinth Algorithm combines many sophisticated procedural generation algorithms and a custom blueprint algorithm to 
-											create vast contigious interconnected dungeons. The algorithm utalizes time and memory efficiency, making dungeons with thousands 
+											create vast contiguous interconnected dungeons. The algorithm utalizes time and memory efficiency, making dungeons with thousands 
 											of rooms generate in a matter of seconds. The algorithm is also built to be scalable and robust for future additions and gameplay mechanics.
 										</p>
 										<!-- Make progress bars for coding languages used here -->
