--- a/labyrinth_demo.html
+++ b/labyrinth_demo.html
@@ -53,7 +53,7 @@
 							<h2>Summary</h2>
 							<p> 
 								The Labyrinth Algorithm is a custom algorithm that combines many sophisticated procedural generation techniques and blueprints to 
-								create vast, contigious, and interconnected dungeons. The algorithm utalizes time and memory efficiency, making dungeons with thousands 
+								create vast, contiguous, and interconnected dungeons. The algorithm utalizes time and memory efficiency, making dungeons with thousands 
 								of rooms generate in a matter of seconds. The algorithm is also built to be scalable and robust for future additions and gameplay mechanics.
 							</p>
 							
@@ -150,7 +150,7 @@
 											<td>Prim's Algorithm</td>
 											<td> 
 												Once the space is triangulated Prim's Algorithm is used to find the shortest path between every point. We are left with a minimum spanning tree 
-												that contains no cycles; a basis for the rooms to be connected together contigiously.
+												that contains no cycles; a basis for the rooms to be connected together contiguously.
 											</td>
 										</tr>
 										<tr>
